--- a/Flex exercises/style.css
+++ b/Flex exercises/style.css
@@ -12,16 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
-  flex: auto;
   display: flex;
+  padding: 8px;
 }
 
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 64px;
+  height: 64px;
+  margin: 16px;
 }
 
 .logo {
@@ -29,7 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  padding: 8px;
+  padding: 16px;
 }
 
 button {
@@ -37,28 +38,22 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px;
-  display: flex;
-  justify-content: flex-end;
+  display: block;
+  margin: 32px;
+  
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  margin: 8px;
+  margin: 16px;
 }
 
 ul {
   list-style-type: none;
   display: flex;
   flex-direction: row;
-  align-items: space-between;
-}
-
-.lower {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-start;
+  align-items: center;
+  margin-right: auto;
 }
