--- a/Flex exercises/style04.css
+++ b/Flex exercises/style04.css
@@ -1,11 +1,10 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    
   }
   
   img {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
   }
   
   .title {
@@ -13,14 +12,20 @@ body {
     font-weight: 900;
     display: flex;
     justify-content: center;
-    margin: 32px;
+    padding: 32px;
   }
 
-  .images {
+  .all {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     padding: 52px;
   }
+
+    .images {
+    display: flex;
+    justify-content: space-evenly;
+}
 
   .texts {
     display: flex;
@@ -28,6 +33,13 @@ body {
     align-items: center;
   }
 
+  .text {
+    display: flex;
+    width: 200px;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  
   /* do not edit this footer */
   .footer {
     position: fixed;
