--- a/My-little-webpage/my-style.css
+++ b/My-little-webpage/my-style.css
@@ -1,15 +1,16 @@
 body {
-    color: whitesmoke;
+    color: black;
     font-size: 24px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: lightgrey;
 }
 
 .top {
-    background-color: grey;
+    background-color: rgb(137, 134, 168);
     display: flex;
     flex-direction: row;
     align-items: center;
+    border-radius: 8px;
 }
 
 .logo img {
@@ -41,25 +42,61 @@ ul {
     width: 100px;
     font-size: 24px;
     border-radius: 8px;
-    background-color: rgba(0, 110, 255, 0.123);
+    background-color: rgba(0, 68, 255, 0.185);
 }
 
 .register {
     width: 125px;
     font-size: 24px;
-    background-color: rgba(255, 115, 0, 0.199);
+    background-color: rgba(0, 119, 255, 0.288);
     border-radius: 8px;
 }
 
 .banner {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
 .title {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 200px;
+    padding-right: 10px;
     flex-wrap: wrap;
-    padding-left: 250px;
     font-size: 50px;
+    width: 700px;
+    text-align: center;
+}
+
+.frontpage-banner {
+    display: flex;
+    justify-content: flex-end;
+    block-size: 300px;
+    flex-shrink: 1;
+    padding-top: 10px;
+    margin-right: auto;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    width: 500px;
+    
+}
+
+.subheader {
+    display: flex;
+    justify-content: center;
+}
+
+.records {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;    
+    gap: 10px;
+    flex-shrink: 0;
 }
